<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Coroutines.CoroutinesActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:onClick="updateCounter"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:layout_marginStart="20dp"
            android:text="@string/update_counter"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/txtCount"
            android:textSize="30sp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_0" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:onClick="runLongRunningTask"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/runlongrunningtask"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/txtMainThreadCount"
            android:textSize="30sp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_0" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:onClick="runLongRunningTaskWithThread"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/runlongrunningtaskwiththread"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/txtAnotherThreadCount"
            android:textSize="30sp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_0" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:onClick="runLongRunningTaskWithCoroutines"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/runlongrunningtaskwithcoroutines"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textAllCaps="false"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/txtCoroutineCount"
            android:textSize="30sp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_0"/>

    </LinearLayout>


</LinearLayout>